Changed host.docker.internal to Docker service name. Added SUCCESS condition for flow triggers of ekm_dbt and upload_local_data_to_motherduck

--- a/kestra-flows/ekm_local_postgres_scheduled.yaml
+++ b/kestra-flows/ekm_local_postgres_scheduled.yaml
@@ -208,7 +208,7 @@ tasks:
 pluginDefaults:
   - type: io.kestra.plugin.jdbc.postgresql
     values:
-      url: jdbc:postgresql://host.docker.internal:5432/postgres-vtec
+      url: jdbc:postgresql://postgres_vtec:5432/postgres-vtec
       username: "{{kv('PG_USER')}}"
       password: "{{kv('PG_PASS')}}"
   
