--- a/kestra-flows/ekm_dbt.yaml
+++ b/kestra-flows/ekm_dbt.yaml
@@ -23,7 +23,7 @@ tasks:
               prod:
                 dbname: postgres-vtec
                 type: postgres
-                host: host.docker.internal
+                host: postgres_vtec
                 user: "{{kv(namespace=flow.namespace, key='PG_USER')}}"
                 pass: "{{kv(namespace=flow.namespace, key='PG_PASS')}}"
                 port: 5432
@@ -38,6 +38,7 @@ triggers:
       - type: io.kestra.plugin.core.condition.ExecutionFlow
         namespace: vtec
         flowId: ekm_local_postgres_scheduled
+        states: [SUCCESS]
   # - id: monthly
   #   type: io.kestra.plugin.core.trigger.Schedule
   #   cron: 30 1 1 * *
